kubernetes/services/calibre-web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calibre-web
  labels:
    name: calibre-web
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
